# catkin_py

./: .gitignore  nav.launch  nav_emb.launch  rviz_config.rviz  setup.sh
catkin_robo_ws/devel/: .catkin  .rosinstall  setup.sh
catkin_robo_ws/devel/include/hector_elevation_msgs/: ElevationGrid.h  ElevationMapMetaData.h
catkin_robo_ws/devel/include/hector_mapping/: HectorDebugInfo.h  HectorIterData.h
catkin_robo_ws/devel/include/hector_timestamp_alignment/: timestamp_alignmentConfig.h
catkin_robo_ws/devel/lib/hector_compressed_map_transport/: map_to_image_node
catkin_robo_ws/devel/lib/hector_costmap/: hector_costmap
catkin_robo_ws/devel/lib/hector_elevation_mapping/: ElevationMappingNode
catkin_robo_ws/devel/lib/hector_elevation_visualization/: hector_elevation_visualization_node
catkin_robo_ws/devel/lib/hector_exploration_controller/: simple_exploration_controller
catkin_robo_ws/devel/lib/hector_exploration_node/: exploration_planner_node
catkin_robo_ws/src/VisionNode/: installdeps.sh
catkin_robo_ws/src/VisionNode/src/vision/: CMakeLists.txt  package.xml
catkin_robo_ws/src/VisionNode/src/vision/include/: DistanceCalculator.h  Location.h  QrReader.h  VisionNode.h
catkin_robo_ws/src/VisionNode/src/vision/src/: DistanceCalculator.cpp  QrReader.cpp  VisionNode.cpp  node.cpp
catkin_robo_ws/src/api/: CMakeLists.txt  package.xml  setup.py
catkin_robo_ws/src/api/src/: PersistentStorage.py  apiServer.py
catkin_robo_ws/src/api/src/model/: Location.py
catkin_robo_ws/src/costmap_2d/: LICENCE
catkin_robo_ws/src/hector_navigation/: LICENCE
catkin_robo_ws/src/hector_slam-catkin/: LICENCE
catkin_robo_ws/src/motor_hat_receiver/: CMakeLists.txt
catkin_robo_ws/src/nav_core/: LICENCE
catkin_robo_ws/src/robot_description/: CMakeLists.txt  package.xml
catkin_robo_ws/src/rplidar_ros/: CMakeLists.txt
catkin_robo_ws/src/udp/: CMakeLists.txt  package.xml  setup.py
catkin_robo_ws/src/udp/src/: udp.py
(+88 files in other folders)
